[JSC] Silence unused-but-set-parameter warnings for older compilers https://bugs.webkit.org/show_bug.cgi?id=212006

Reviewed by Mark Lam.

GCC up to 9.x will emit unused-but-set-parameter for the sources
parameter when NumberOfRegisters is zero (the if block is eliminated)
and for destinations when also ASSERT_ENABLED is false.

* jit/CCallHelpers.h:
(JSC::CCallHelpers::setupStubArgs):


Canonical link: https://commits.webkit.org/224889@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261797 268f45cc-cd09-0410-ab3c-d52691b4dbfc